--- a/minues-ios-app/minues-ios-app/arctic-fox-theme/_layouts/page.html
+++ b/minues-ios-app/minues-ios-app/arctic-fox-theme/_layouts/page.html
@@ -1,14 +1,29 @@
----
-layout: default
----
-<div class="post">
+<!DOCTYPE html>
+<html>
 
-  <header class="post-header">
-    <h1 class="post-title">{{ page.title }}</h1>
-  </header>
+  {% include head.html %}
 
-  <article class="post-content">
-    {{ content }}
-  </article>
+  <body>
 
-</div>
+    {% include header.html %}
+
+    <div class="page-content">
+      <div class="wrapper">
+        <div class="post">
+
+          <header class="post-header">
+            <h1 class="post-title">{{ page.title }}</h1>
+          </header>
+
+          <article class="post-content">
+            {{ content }}
+          </article>
+
+        </div>
+      </div>
+    </div>
+
+    {% include footer.html %}
+
+  </body>
+</html>
