--- a/minues-ios-app/minues-ios-app/arctic-fox-theme/_layouts/post.html
+++ b/minues-ios-app/minues-ios-app/arctic-fox-theme/_layouts/post.html
@@ -1,21 +1,38 @@
----
-layout: default
----
-<div class="post">
+<!DOCTYPE html>
+<html>
 
-  <header class="post-header">
-     <h1 class="post-title">{{ page.title }}</h1>
-     <p class="post-meta">Posted on {{ page.date | date: "%b %-d, %Y" }}{% if page.author %} • {{ page.author }}{% endif %}{% if page.meta %} • {{ page.meta }}{% endif %}</p>
-  </header>
+  {% include head.html %}
 
-  <article class="post-content">
-    {{ content }}
-  </article>
+  <body>
 
-  <div align="center">
-  	<a href="#">
-  	<i class="fa fa-arrow-circle-up fa-2x"></i>
-  	</a>
-  </div>
+    {% include header.html %}
 
-</div>
+    <div class="page-content">
+      <div class="wrapper">
+        <div class="post">
+
+          <header class="post-header">
+             <h1 class="post-title">{{ page.title }}</h1>
+             <p class="post-meta">Posted on {{ page.date | date: "%b %-d, %Y" }}{% if page.author %} • {{ page.author }}{% endif %}{% if page.meta %} • {{ page.meta }}{% endif %}</p>
+          </header>
+
+          <article class="post-content">
+            {{ content }}
+          </article>
+
+          <div align="center">
+            <a href="#">
+            <i class="fa fa-arrow-circle-up fa-2x"></i>
+            </a>
+          </div>
+
+        </div>
+      </div>
+    </div>
+
+    {% include footer.html %}
+
+  </body>
+</html>
+
+
