--- a/minues-ios-app/minues-ios-app/arctic-fox-theme/_layouts/page.html
+++ b/minues-ios-app/minues-ios-app/arctic-fox-theme/_layouts/page.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
 
-  {% include head.html %}
+  {{ includes.head }}
 
   <body>
 
-    {% include header.html %}
+    {{ includes.header }}
 
     <div class="page-content">
       <div class="wrapper">
@@ -23,7 +23,7 @@
       </div>
     </div>
 
-    {% include footer.html %}
+    {{ includes.footer }}
 
   </body>
 </html>
