--- a/minues-ios-app/minues-ios-app/arctic-fox-theme/_layouts/page.html
+++ b/minues-ios-app/minues-ios-app/arctic-fox-theme/_layouts/page.html
@@ -1,11 +1,45 @@
 <!DOCTYPE html>
 <html>
 
-  {{ includes.head }}
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <title>{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}</title>
+    <meta name="description" content="{% if page.excerpt %}{{ page.excerpt }}{% else %}{{ site.description }}{% endif %}">
+
+    <link rel="stylesheet" href="{{site.baseurl}}/css/main.css">
+    <link rel="canonical" href="{{ page.url }}">
+    <link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="{{site.baseurl}}/feed.xml" />
+
+    <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
+    <link href='http://fonts.googleapis.com/css?family=PT+Sans:400,700' rel='stylesheet' type='text/css'>
+    <link href='http://fonts.googleapis.com/css?family=Open+Sans:300,700' rel='stylesheet' type='text/css'>
+  </head>
+
 
   <body>
 
-    {{ includes.header }}
+    <div class="site-header">
+
+        <nav class="site-nav">
+          <a href="#" class="menu-icon">
+            <i class="fa fa-navicon fa-lg"></i>
+          </a>
+
+          <div class="trigger">
+              <a class="page-link" href="{{ site.baseurl }}/">Home</a>
+            {% for page in site.pages %}
+              {% if page.title %}
+              <a class="page-link" href="{{ site.baseurl }}{{ page.url }}">{{ page.title }}</a>
+              {% endif %}
+            {% endfor %}
+          </div>
+        </nav>
+
+
+    </div>
 
     <div class="page-content">
       <div class="wrapper">
@@ -23,7 +57,6 @@
       </div>
     </div>
 
-    {{ includes.footer }}
 
   </body>
 </html>
